--- a/todolist_backend/package.json
+++ b/todolist_backend/package.json
@@ -32,6 +32,9 @@
   "dependencies": {
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
-    "nodemon": "^3.1.11"
+    "nodemon": "^3.1.11",
+     "prisma": "^6.2.1"
   }
 }
+
+
