--- a/todolist_backend/package.json
+++ b/todolist_backend/package.json
@@ -27,14 +27,12 @@
     "dev": "nodemon app.js",
     "test": "node test/test.js",
     "build": "tsc"
-
   },
   "dependencies": {
+    "@prisma/client": "^6.2.1",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "nodemon": "^3.1.11",
-     "prisma": "^6.2.1"
+    "prisma": "^6.2.1"
   }
 }
-
-
