feat: terminando clase sincronica todolistapp falta terminar la última configuración del middleware que compara el JWT

--- a/todolist_backend/.env
+++ b/todolist_backend/.env
@@ -7,3 +7,4 @@ PORT=5500
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="mongodb+srv://todolistapp_user:jTppGjEaiIxADJB6@todolistapp.x3bykif.mongodb.net/todolistdb?ssl=true"
+SECRET_KEY="fullstack21"
