--- a/todolist_backend/package.json
+++ b/todolist_backend/package.json
@@ -30,8 +30,10 @@
   },
   "dependencies": {
     "@prisma/client": "^6.2.1",
+    "bcrypt": "^6.0.0",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
+    "jsonwebtoken": "^9.0.2",
     "nodemon": "^3.1.11",
     "prisma": "^6.2.1"
   }
